@@ -1,3 +1,8 @@
+2006-07-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * examples/audio_out.c
+    Be more explicit about setting the audio output format.
+
 2006-06-06  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/samplerate.c src/src_linear.c src/src_sinc.c
